fixed buttons getting stuck

--- a/trivia.css
+++ b/trivia.css
@@ -79,24 +79,15 @@ iframe {
 /*----^---<-------Spotify------->-----^--------*/
 
 /*---------Answer Red Green When Clicked----\/---*/
-#True {
-   
-   }
+
    #True:active {
       background-color: rgb(109, 169, 109);
    }
-   #True:hover {
-      background-color: rgb(115, 117, 166);
-   }
-#False {
-   
-   }
+
    #False:active {
       background-color: rgb(200, 75, 75);
    }
-   #False:hover {
-   background-color: rgb(115, 117, 166);
-   }
+  
 /*----^----<---Answer Red Green When Clicked---->--^---*/
 
 /*--------------Restart Button----------------------\/ */
